[package]
name = "range_union_find"
version = "0.3.0"
authors = ["rlee287 <rlee287@yahoo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A union-find data structure for ranges"
homepage = "https://github.com/rlee287/range_union_find"
documentation = "https://docs.rs/range_union_find"
repository = "https://github.com/rlee287/range_union_find"
readme = "README.md"
keywords = ["disjoint-set", "union-find"]
categories = ["algorithms", "data-structures"]

[features]
default = []
std = []

[dependencies]
num-traits = "0.2.14"
sorted-vec = "0.5.2"

[dev-dependencies]
version-sync = "0.9"
