[package]
name = "range_union_find"
version = "0.5.0"
authors = ["rlee287 <rlee287@yahoo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A union-find data structure for ranges"
homepage = "https://github.com/rlee287/range_union_find"
documentation = "https://docs.rs/range_union_find"
repository = "https://github.com/rlee287/range_union_find"
readme = "README.md"
keywords = ["no-std", "ranges", "disjoint-set", "union-find"]
categories = ["algorithms", "data-structures"]

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]
include_serde = ["serde", "sorted-vec/serde-nontransparent"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
sorted-vec = "0.8"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
version-sync = { version = ">=0.9.3, < 0.10.0", default-features = false, features = ["html_root_url_updated"] }
